--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,36 @@
-# Global logging configuration 开发时候建议使用 debug
-log4j.rootLogger=INFO
-# Console output...
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] - %m%n
+
+# log4j.rootLogger日志输出类别和级别：只输出不低于该级别的日志信息DEBUG < INFO < WARN < ERROR < FATAL
+# WARN：日志级别     CONSOLE：输出位置自己定义的一个名字       logfile：输出位置自己定义的一个名字
+log4j.rootLogger=DEBUG,CONSOLE,logfile
+log4j.logger.io.netty=WARN
+#############
+# 输出到控制台
+#############
+
+# 配置CONSOLE输出到控制台
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+# 配置CONSOLE设置为自定义布局模式
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+# 配置CONSOLE日志的输出格式 ：
+# 时间 - %r耗费毫秒数 %p日志的优先级 %t线程名 %C所属类名通常为全类名 %L代码中的行号 %x线程相关联的NDC %m日志 %n换行
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} - %-4r %-5p [%t] %C:%L %x - %m%n
+
+################
+# 输出到日志文件中
+################
+
+# 配置logfile输出到文件中
+# org.apache.log4j.ConsoleAppender（控制台）
+# org.apache.log4j.FileAppender（文件）
+# org.apache.log4j.DailyRollingFileAppender（每天产生一个日志文件）
+# org.apache.log4j.RollingFileAppender（文件大小到达指定尺寸的时候产生一个新的文件）
+# org.apache.log4j.WriterAppender（将日志信息以流格式发送到任意指定的地方）
+log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
+# 保存编码格式
+log4j.appender.logfile.Encoding=UTF-8
+# 输出文件位置此为项目根目录下的logs文件夹中
+log4j.appender.logfile.File=logs/root.log
+# 配置logfile为自定义布局模式
+log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.logfile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %F %p %m%n
+
