--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 # log4j.rootLogger日志输出类别和级别：只输出不低于该级别的日志信息DEBUG < INFO < WARN < ERROR < FATAL
 # WARN：日志级别     CONSOLE：输出位置自己定义的一个名字       logfile：输出位置自己定义的一个名字
 log4j.rootLogger=DEBUG,CONSOLE,logfile
-log4j.logger.io.netty=WARN
+log4j.logger.io.netty=INFO
 #############
 # 输出到控制台
 #############
@@ -29,7 +29,7 @@ log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
 # 保存编码格式
 log4j.appender.logfile.Encoding=UTF-8
 # 输出文件位置此为项目根目录下的logs文件夹中
-log4j.appender.logfile.File=logs/root.log
+log4j.appender.logfile.File=/logs/root.log
 # 配置logfile为自定义布局模式
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %F %p %m%n
